--- a/_sass/pages/_testimonial.scss
+++ b/_sass/pages/_testimonial.scss
@@ -37,6 +37,7 @@
 
   &__img {
     width: 100%;
+    flex: 0 0 auto;
   }
 
   &__name {
